Photo is a file field

--- a/cloneinstagram/app/views/posts/_form.html.erb
+++ b/cloneinstagram/app/views/posts/_form.html.erb
@@ -18,7 +18,7 @@
 
   <div class="field">
     <%= form.label :photo %>
-    <%= form.text_field :photo, id: :post_photo %>
+    <%= form.file_field :photo, id: :post_photo %>
   </div>
 
   <div class="field">
