--- a/cloneinstagram/app/views/posts/show.html.erb
+++ b/cloneinstagram/app/views/posts/show.html.erb
@@ -1,7 +1,12 @@
-<%= image_tag @post.photo %>
-<%= @post.title %>
+<div class="photo">
+  <%= image_tag @post.photo %>
+</div>
+<br>
 
-<%= @post.user %>
+<div class="title">
+  <h2><%= @post.title %></h2>
+</div>
 
-<%= link_to 'Edit', edit_post_path(@post) %> |
-<%= link_to 'Back', posts_path %>
+<div class="author">
+  Postado por <%= @post.user.email %>
+</div>
