--- a/cloneinstagram/app/views/posts/index.html.erb
+++ b/cloneinstagram/app/views/posts/index.html.erb
@@ -1,25 +1,23 @@
-<h1>Posts</h1>
+<% @posts.each do |post| %>
+  <div class="row">
+    <div class="col-md-2">
+      <%= link_to post do %>
+        <%= image_tag post.photo.url(:thumb) %>
+      <% end %>
+    </div>
 
-<table>
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>Photo</th>
-      <th>User</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+    <div class="col-md-6">
+      <%= link_to post do %>
+        <h2><%= post.title %></h2>
+      <% end %>
 
-  <tbody>
-    <% @posts.each do |post| %>
-      <tr>
-        <td><%= post.title %></td>
-        <td><%= post.photo %></td>
-        <td><%= post.user %></td>
-        <td><%= link_to 'Show', post %></td>
-        <td><%= link_to 'Edit', edit_post_path(post) %></td>
-        <td><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+      <%= link_to 'Editar', edit_post_path(post) %>
+      <%= link_to 'Apagar', post, method: :delete, data: { confirm: 'Você tem certeza?' } %>
+    </div>
+
+    <div class="col-md-4">
+      Postado por <strong><%= post.user.email %></strong>.
+    </div>
+  </div>
+  <hr>
+<% end %>
