--- a/cloneinstagram/app/views/posts/index.html.erb
+++ b/cloneinstagram/app/views/posts/index.html.erb
@@ -21,3 +21,11 @@
   </div>
   <hr>
 <% end %>
+
+<div class="row"></div>
+  <div class="col-md-12">
+    <div class="text-md-center">
+      <%= will_paginate @posts %>
+    </div>
+  </div>
+</div>
